css/main.css
/*
Available font families:

    font-family: "Quicksand", sans-serif;
    font-family: "Montserrat", sans-serif;
*/

html {
    height:100%;
    margin:0;
}

body {
    margin:0;
    min-height:100%;
    height:100%;
    background-color:#2c9bdf;
}

h6 {
    font-family: "Montserrat", sans-serif;
    text-align:center;
    color:#000;
    margin-top:8px;
    margin-bottom:8px;
}

strong {
    background:rgba(236, 236, 236, 0.2);
    padding-left:2px;
    padding-right:2px;
}

header {
    position:fixed;
    width:100%;
    height:72px;
    background:#fdfdfd;
    z-index:999;
}

#headershadow {
    position:fixed;
    padding-top:72px;
    width:100%;
    height:4px;
    background:#c0c0c0;
    z-index:998;
}

img.nav-profile-img {
    margin:4px 0 0 4px;
    float:left;
}

a.anchor {
    display: block;
    position: relative;
    top: -80px;
    visibility: hidden;
}

#navbar {
    font-family: "Montserrat", sans-serif;
    text-align:left;
    font-size:18px;
    margin-top:26px;
}

#navbar a {margin-left:28px;}
#navbar a:link {text-decoration:none; color:#222;}
#navbar a:visited {text-decoration:none; color:#222;}
#navbar a:hover {text-decoration:none; color:#999;}
#navbar a:active {text-decoration:none; color:#bbb;}
#navbar a.navbar-current-page {color:#999;}

#navicon {display:none;}
#navicon li, #navicon a {height:40px;}

.uppercase {text-transform: uppercase;}

#content {
    background-color:#2c9bdf;
    padding-top:64px;
}

.container-title {
    font-family:"Montserrat",sans-serif;
    color:#fff;
    text-align:center;
    padding:10px 15px 10px 15px;
    margin:0;
}

.container-body {
    font-family:"Quicksand",sans-serif;
    color:#fff;
    padding:10px 15px 10px 15px;
    margin:0;
    text-align:justify;
    background-color:#2980b9;
}

.list-body {
    font-family:"Quicksand",sans-serif;
    color:#fff;
    margin-bottom:8px
}

.vertically-centered-banner-outer {
    display:table;
    height:380px;
    overflow:hidden;
    float:right;
}

.vertically-centered-banner-inner {
    display:table-cell;
    vertical-align:
    middle;
}

.main-banner {
    background:#ececec;
    height:380px;
}

.main-banner h1 {
    font-family: "Quicksand", sans-serif;
    font-size: 24px;
    padding-left:10px;
    margin:0;
    text-align:right;
}

.main-banner img {
    width:380px;
    height:380px;
    float:right;
}

.split-wrapper {
    background-color:#2c9bdf;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    margin-top: 16px;
}

.split-wrapper ul {
    margin:0;
    padding-bottom:16px;
}

.split-wrapper li {
    padding-bottom:8px
}

.left-container {
    background-color:#2980b9;
    float:left;
    margin: 0 8px 16px 16px;
    flex: 1;
}

.right-container {
    background-color:#2980b9;
    float:right;
    margin: 0 16px 16px 8px;
    flex: 1;
}

.full-container {
    background-color:#2980b9;
    clear:both;
    margin:0 auto 16px auto;

    /* Firefox */
    width: -moz-calc(100% - 32px);
    /* WebKit */
    width: -webkit-calc(100% - 32px);
    /* Opera */
    width: -o-calc(100% - 32px);
    /* Standard */
    width: calc(100% - 32px);
}

.flex-list {
    padding:16px 8px 0 8px;
    margin:0;
    list-style:none;

    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;

    -webkit-flex-flow: row wrap;
    justify-content: space-around;
    align-items: center;
}

.flex-item {
    margin: 0px auto 16px auto;
}

.work-icon img {
    width:200px;
    height:200px;
    z-index:1;
}

.contact-icon img {
    width:75px;
    height:75px;
}

.graphic-design {
    max-width:800px;
    margin:0 auto;
}

.design-item img {
    display:block;
    margin: 0 8px 16px 8px;
    width:100%;
    max-width:300px;
    height:auto;
}

.design-item p {
    margin: 0 8px 16px 8px;
    max-width:300px;
    padding-left:0;
    padding-right:0;
    text-align: center;
}

footer.site-footer {
    background:#2c9bdf;
    width:100%;
    height:100%;
    clear:both;
}

.video {
    max-width: 560px;
    margin:0 auto;
}

.video-description {
    margin:0 auto 0 auto;
    background-color: #2980b9;
}

.videowrapper {
    float: none;
    clear: both;
    width: 100%;
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 25px;
    height: 0;
}
.videowrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.shadowed {
    -webkit-filter: drop-shadow(8px 8px 15px rgba(0,0,0,0.75));
    filter: url(#drop-shadow);
    -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=8, OffY=8, Color='#444')";
    filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=8, OffY=8, Color='#444')";
}

/* MOBILE DEVICES */

@media screen and (max-width:400px) {
    .flex-list {
        flex-direction:column;
    }
}

@media screen and (max-width:600px) {

    strong {
        background:rgba(0, 0, 0, 0);
        padding-left:2px;
        padding-right:2px;
    }

    #navbar {
        display:none;
    }

    #navicon {
        padding:0;
        margin:16px auto;
        list-style:none;

        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;

        -webkit-flex-flow: row wrap;
        justify-content: space-around;
    }

    .navicon-flex-item {
        margin:0 auto;
    }

    .container-title {
        text-align:center;
    }

    .vertically-centered-banner-outer {
        display:table;
        height:300px;
        overflow:hidden;
        float:none;
    }

    .vertically-centered-banner-inner {
        display:table-cell
         vertical-align:
         middle;
     }

    .main-banner {
        height:300px;
    }

    .main-banner h1 {
        padding-right:10px;
        text-align:center;
    }

    .main-banner img {
        width:0px;
        height:0px;
        float:right;
    }

    .split-wrapper {
        display: block;
    }

    .left-container {
        float:none;
        margin-left: 16px;
        margin-right: 16px;

        /* Firefox */
        width: -moz-calc(100% - 32px);
        /* WebKit */
        width: -webkit-calc(100% - 32px);
        /* Opera */
        width: -o-calc(100% - 32px);
        /* Standard */
        width: calc(100% - 32px);
    }

    .right-container {
        float:none;
        margin-left: 16px;
        margin-right: 16px;

        /* Firefox */
        width: -moz-calc(100% - 32px);
        /* WebKit */
        width: -webkit-calc(100% - 32px);
        /* Opera */
        width: -o-calc(100% - 32px);
        /* Standard */
        width: calc(100% - 32px);
    }

    .work-icon img {
        width:100px;
        height:100px;
    }
}

